# openpix

./: .gitignore  .pre-commit-config.yaml  CODING_GUIDELINES.md  CONTRIBUTING.md  LICENSE.md  README.md  pyproject.toml
openpix/: __init__.py  sdk.py
openpix/config/: __init__.py  config.py  request_options.py
openpix/core/: __init__.py  entities.py  http_client.py  op_base.py  utils.py
openpix/resources/: __init__.py  charge.py  customer.py  refund.py  transaction.py  webhook.py
tests/: test_openpix.py
